@@ -1,5 +1,6 @@
 package net.minecraft.world.level.levelgen.flat;
 
+import com.google.common.collect.ImmutableSet;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -75,7 +76,7 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.CLASSIC_FLAT,
                 Blocks.GRASS_BLOCK,
                 Biomes.PLAINS,
-                Set.of(BuiltinStructureSets.VILLAGES),
+                ImmutableSet.of(BuiltinStructureSets.VILLAGES),
                 false,
                 false,
                 new FlatLayerInfo(1, Blocks.GRASS_BLOCK),
@@ -86,7 +87,7 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.TUNNELERS_DREAM,
                 Blocks.STONE,
                 Biomes.WINDSWEPT_HILLS,
-                Set.of(BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS),
+                ImmutableSet.of(BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS),
                 true,
                 false,
                 new FlatLayerInfo(1, Blocks.GRASS_BLOCK),
@@ -98,7 +99,7 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.WATER_WORLD,
                 Items.WATER_BUCKET,
                 Biomes.DEEP_OCEAN,
-                Set.of(BuiltinStructureSets.OCEAN_RUINS, BuiltinStructureSets.SHIPWRECKS, BuiltinStructureSets.OCEAN_MONUMENTS),
+                ImmutableSet.of(BuiltinStructureSets.OCEAN_RUINS, BuiltinStructureSets.SHIPWRECKS, BuiltinStructureSets.OCEAN_MONUMENTS),
                 false,
                 false,
                 new FlatLayerInfo(90, Blocks.WATER),
@@ -112,7 +113,7 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.OVERWORLD,
                 Blocks.GRASS,
                 Biomes.PLAINS,
-                Set.of(
+                ImmutableSet.of(
                     BuiltinStructureSets.VILLAGES,
                     BuiltinStructureSets.MINESHAFTS,
                     BuiltinStructureSets.PILLAGER_OUTPOSTS,
@@ -130,7 +131,7 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.SNOWY_KINGDOM,
                 Blocks.SNOW,
                 Biomes.SNOWY_PLAINS,
-                Set.of(BuiltinStructureSets.VILLAGES, BuiltinStructureSets.IGLOOS),
+                ImmutableSet.of(BuiltinStructureSets.VILLAGES, BuiltinStructureSets.IGLOOS),
                 false,
                 false,
                 new FlatLayerInfo(1, Blocks.SNOW),
@@ -143,7 +144,7 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.BOTTOMLESS_PIT,
                 Items.FEATHER,
                 Biomes.PLAINS,
-                Set.of(BuiltinStructureSets.VILLAGES),
+                ImmutableSet.of(BuiltinStructureSets.VILLAGES),
                 false,
                 false,
                 new FlatLayerInfo(1, Blocks.GRASS_BLOCK),
@@ -154,7 +155,9 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.DESERT,
                 Blocks.SAND,
                 Biomes.DESERT,
-                Set.of(BuiltinStructureSets.VILLAGES, BuiltinStructureSets.DESERT_PYRAMIDS, BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS),
+                ImmutableSet.of(
+                    BuiltinStructureSets.VILLAGES, BuiltinStructureSets.DESERT_PYRAMIDS, BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS
+                ),
                 true,
                 false,
                 new FlatLayerInfo(8, Blocks.SAND),
@@ -166,14 +169,16 @@ public class FlatLevelGeneratorPresets {
                 FlatLevelGeneratorPresets.REDSTONE_READY,
                 Items.REDSTONE,
                 Biomes.DESERT,
-                Set.of(),
+                ImmutableSet.of(),
                 false,
                 false,
                 new FlatLayerInfo(116, Blocks.SANDSTONE),
                 new FlatLayerInfo(3, Blocks.STONE),
                 new FlatLayerInfo(1, Blocks.BEDROCK)
             );
-            return this.register(FlatLevelGeneratorPresets.THE_VOID, Blocks.BARRIER, Biomes.THE_VOID, Set.of(), true, false, new FlatLayerInfo(1, Blocks.AIR));
+            return this.register(
+                FlatLevelGeneratorPresets.THE_VOID, Blocks.BARRIER, Biomes.THE_VOID, ImmutableSet.of(), true, false, new FlatLayerInfo(1, Blocks.AIR)
+            );
         }
     }
 }
